cabal-version:      2.2
name:               enterprises
version:            0.1.0.0
category:           web
homepage:           https://github.com/hypered/enterprises/
synopsis:           Download Open Data files from the Belgian CBE.
description:        This program assists in downloading CSV files from the CBE Open Data pages.

common common-extensions
  default-language: Haskell2010
  default-extensions:
    ImportQualifiedPost
    LambdaCase
    NoImplicitPrelude
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StrictData
    TypeApplications
    TypeOperators

common common-options
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wmissing-export-lists
    -fno-warn-unused-do-bind
    +RTS -A256m -n4m -qg -RTS

common common-dependencies
  build-depends:
      base >=4.7 && <5
    , bytestring
    , dotenv
    , filepath
    , Glob
    , lens
    , optparse-applicative
    , protolude
    , tagsoup
    , text
    , wreq

executable enterprises
  import: common-extensions, common-options, common-dependencies
  main-is: enterprises.hs
  hs-source-dirs: bin
  ghc-options:
    -threaded
